modifiche css amministratore

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -18,13 +18,15 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1 class="h1Amm">Benvenuto<nome></nome>&excl;</h1>
-            <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period; Comincia subito&excl;</p>
-            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="12">LISTA MESSAGGI</a></p>
-            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
-            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="14">AGGIUNGI VEICOLO DA VENDERE</a></p>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <h1 class="h1Amm">Benvenuto<nome></nome>&excl;</h1>
+                <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period; Comincia subito&excl;</p>
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="12">LISTA MESSAGGI</a></p>
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="14">AGGIUNGI VEICOLO DA VENDERE</a></p>
+            </div>
         </div>
         <footer></footer>
     </body>
