--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -18,12 +18,14 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <messaggio></messaggio>
-            <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
-            <infoPersonali></infoPersonali>
-            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a></p>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <messaggio></messaggio>
+                <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
+                <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a></p>
+                <infoPersonali></infoPersonali>
+            </div>
         </div>
         <footer></footer>
     </body>
