--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -18,11 +18,13 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <messaggio></messaggio>
-            <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
-            <messaggiAmministratore></messaggiAmministratore>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <messaggio></messaggio>
+                <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
+                <messaggiAmministratore></messaggiAmministratore>
+            </div>
         </div>
         <footer></footer>
     </body>
