--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -18,12 +18,14 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <messaggio></messaggio>
-            <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
-            <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
-            <veicoliNoleggio></veicoliNoleggio>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <messaggio></messaggio>
+                <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
+                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
+                <veicoliNoleggio></veicoliNoleggio>
+            </div>
         </div>
         <footer></footer>
     </body>
