--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -18,12 +18,14 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <messaggio></messaggio>
-            <h1 class="h1Amm">Lista dei veicoli in vendita</h1>
-            <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a></p>
-            <veicoliVendita></veicoliVendita>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <messaggio></messaggio>
+                <h1 class="h1Amm">Lista dei veicoli in vendita</h1>
+                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a></p>
+                <veicoliVendita></veicoliVendita>
+            </div>
         </div>
         <footer></footer>
     </body>
