--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -18,24 +18,26 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <messaggio></messaggio>
-            <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&period;</p>
-            <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
-                <fieldset>
-                    <legend>Messaggio</legend>
-                    <p><strong>Nota bene</strong>&colon; tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
+            <menuAmministratore></menuAmministratore>
+            <div class="testoAmministratore">
+                <messaggio></messaggio>
+                <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&period;</p>
+                <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
+                    <fieldset>
+                        <legend>Messaggio</legend>
+                        <p><strong>Nota bene</strong>&colon; tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
-                    <label for="oggetto">Oggetto &ast;</label>
-                    <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
+                        <label for="oggetto">Oggetto &ast;</label>
+                        <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
 
-                    <label for="testo">Testo &ast;</label>
-                    <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="50" rows="5" ></textarea>
+                        <label for="testo">Testo &ast;</label>
+                        <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="50" rows="5" ></textarea>
 
-                    <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="14" />
-                </fieldset>
-            </form>
+                        <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="14" />
+                    </fieldset>
+                </form>
+            </div>
         </div>
         <footer></footer>
     </body>
