migliorie css varie

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -30,17 +30,17 @@
                         <loginError></loginError>
 
                         <label for="mail">Email</label>
-                        <input type="text" id="mail" name="mail" class="mail" tabindex="8" />
+                        <input type="text" id="mail" name="mail" class="inputArea" tabindex="8" />
 
                         <label for="inputPsw">Password</label>
-                        <input type="password" id="inputPsw" name="password" class="formText" tabindex="9" />
+                        <input type="password" id="inputPsw" name="password" class="inputArea" tabindex="9" />
 
                         <input type="submit" class="bottoni" value="Login"/>
                     </fieldset>
 
                 </form>
                 <div id="registrati">
-                    <p>Non hai un account? <a href="registrati.php">Registrati!</a></p>
+                    <p class="nuovoAccount">Non hai un account? <a class="linkRapidi" href="registrati.php">Registrati!</a></p>
                 </div>
 
             </div>
