--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -29,28 +29,28 @@
 						<legend>Dati personali</legend>
 
 						<label for="mail">Email *</label>
-						<input type="text" name="mail" id="mail" class="mail" tabindex="7" />
+						<input type="text" name="mail" id="mail" class="inputArea" tabindex="7" />
 
 						<label for="nome">Nome *</label>
-						<input type="text" name="nome" id="nome" class="" tabindex="8" />
+						<input type="text" name="nome" id="nome" class="inputArea" tabindex="8" />
 
 						<label for="cognome">Cognome *</label>
-						<input type="text" name="cognome" id="cognome" class="" tabindex="9" />
+						<input type="text" name="cognome" id="cognome" class="inputArea" tabindex="9" />
 
 						<label for="numeroTelefono">Telefono*</label>
-						<input type="text" name="numeroTelefono" id="numeroTelefono" class="" tabindex="10" />
+						<input type="text" name="numeroTelefono" id="numeroTelefono" class="inputArea" tabindex="10" />
 
 						<label for="indirizzo">Indirizzo*</label>
-						<input type="text" name="indirizzo" id="indirizzo" class="" tabindex="11" />
+						<input type="text" name="indirizzo" id="indirizzo" class="inputArea" tabindex="11" />
 
 						<label for="nascita">Data di nascita* (dd-mm-yyyy)</label>
-						<input type="text" name="nascita" id="nascita" class="" tabindex="12"  />
+						<input type="text" name="nascita" id="nascita" class="inputArea" tabindex="12"  />
 
 						<label for="password">Password *</label>
-						<input type="password" name="password" id="password" class="" tabindex="13" />
+						<input type="password" name="password" id="password" class="inputArea" tabindex="13" />
 
 						<label for="ripetiPassword">Ripeti password*</label>
-						<input type="password" name="ripetiPassword" id="ripetiPassword" tabindex="14" />
+						<input type="password" name="ripetiPassword" id="ripetiPassword" class="inputArea" tabindex="14" />
 
 						<input type="submit" class="bottoni" value="Registrati" />
 					</fieldset>
