--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="auto, preventivi, noleggi, dati, registrazione, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
-		<link rel="icon" type="images/svg" href="" />
+		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
   	<script type="text/javascript" src=""></script>
