--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -12,7 +12,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="icon" type="images/svg" href="" />
+        <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
         
