--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<meta name="author" content="Erik Tabacchi" />
-		<link rel="icon" type="images/svg" href="" />
+		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
