--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="nuovo veicolo, aggiungi veicolo, area amministratore" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
-        <link rel="icon" type="images/svg" href="" />
+        <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<script type="text/javascript" src=""></script>
