--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -5,14 +5,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Area Privata</title>
 		<meta name="title" content="Area privata utente" />
-    	<meta name="description" content="Area personale dell'utente" />
+    <meta name="description" content="Area personale dell'utente" />
 		<meta name="keywords" content="auto, preventivi, noleggi, messaggi, login, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-    	<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-    	<script type="text/javascript" src=""></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
+    <script type="text/javascript" src=""></script>
 	</head>
 
 	<body>
