--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -9,6 +9,7 @@
 		<meta name="keywords" content="auto, preventivi, noleggi, dati, registrazione, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
