--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -26,24 +26,24 @@
                 <form id="modificaVeicoloVendita" class="formAmm" action="../PHP/salvaVeicoloVenditaModificato.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Veicolo</legend>
-                        <p class="msgFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
+                        <p class="pFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
 
                         <label for="marca">Marca</label>
-                        <input type="text" name="marca" id="marca" class="" tabindex="12" />
+                        <input type="text" name="marca" id="marca" tabindex="12" />
 
                         <label for="modello">Modello</label>
-                        <input type="text" name="modello" id="modello" class="" tabindex="13" />
+                        <input type="text" name="modello" id="modello" tabindex="13" />
 
                         <label for="km">Chilometri</label>
-                        <input type="text" name="km" id="km" class="" tabindex="14" />
+                        <input type="text" name="km" id="km" tabindex="14" />
 
-                        <label for="cilindrata">Cilindrata</label>
-                        <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
+                        <label for="cilindrata">Cilindrata in cm&sup3;</label>
+                        <input type="text" name="cilindrata" id="cilindrata" tabindex="15" />
 
-                        <label for="prezzo">Prezzo</label>
-                        <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
+                        <label for="prezzo">Costo in &euro;</label>
+                        <input type="text" name="prezzo" id="prezzo" tabindex="16" />
 
-                        <input type="submit" id="modificheVeicoloVendita" value="SALVA MODIFICHE" tabindex="17" />
+                        <input type="submit" id="salvaModificheVeicoloVendita" value="SALVA MODIFICHE" tabindex="17" />
                     </fieldset>
                 </form>
             </div>
