--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -26,7 +26,7 @@
                 <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Messaggio</legend>
-                        <p><strong>Nota bene</strong>&colon; tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
+                        <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
                         <label for="oggetto">Oggetto &ast;</label>
                         <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
