--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -44,7 +44,7 @@
                         <label for="nascita">Data di nascita<br />&lpar;gg-mm-aaaa&rpar;</label>
                         <input type="text" name="nascita" id="nascita" class="" tabindex="16" />
 
-                        <input type="submit" id="modificaInfo" value="SALVA MODIFICHE" tabindex="17" />
+                        <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="17" />
                     </fieldset>
                 </form>
             </div>
