--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -26,28 +26,28 @@
                 <form id="nuovoVeicoloVendita" class="formAmm" action="../PHP/salvaNuovoVeicoloVendita.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Veicolo</legend>
-                        <p>Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
+                        <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
                     
                         <label for="marca">Marca &ast;</label>
-                        <input type="text" name="marca" id="marca" class="" tabindex="12" />
+                        <input type="text" name="marca" id="marca" tabindex="12" />
 
                         <label for="modello">Modello &ast;</label>
-                        <input type="text" name="modello" id="modello" class="" tabindex="13" />
+                        <input type="text" name="modello" id="modello" tabindex="13" />
 
                         <label for="km">Chilometri &ast;</label>
-                        <input type="text" name="km" id="km" class="" tabindex="14" />
+                        <input type="text" name="km" id="km" tabindex="14" />
 
                         <label for="cilindrata">Cilindrata in cc &ast;</label>
-                        <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
+                        <input type="text" name="cilindrata" id="cilindrata" tabindex="15" />
 
                         <label for="prezzo">Prezzo in &euro; &ast;</label>
-                        <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
+                        <input type="text" name="prezzo" id="prezzo" tabindex="16" />
 
                         <label for="immagineAuto">Immagine &ast;</label>
-                        <input type="file" name="immagineAuto" id="immagineAuto" class="" tabindex="17" />
+                        <input type="file" name="immagineAuto" id="immagineAuto" tabindex="17" />
 
                         <label for="descrizione">Descrizione dell&apos;immagine &ast;</label>
-                        <input type="text" name="descrizione" id="descrizione" class="" tabindex="18" />
+                        <input type="text" name="descrizione" id="descrizione" tabindex="18" />
 
                         <input type="submit" id="salvaNuovoVeicoloVendita" value="SALVA" tabindex="19" />
                     </fieldset>
