aggiunta nuova pagina area amministratore

--- a/HTML/listaNoleggiAmministratore.html
+++ b/HTML/listaNoleggiAmministratore.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Veicoli A Noleggio &vert; Area Amministratore</title>
+        <title>Riepilogo Veicoli Noleggiati &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="title" content="homepage area personale amministratore" />
-		<meta name="description" content="homepage dell'area amministratore del sito" />
-		<meta name="keywords" content="home, area personale, area amministratore" />
+		<meta name="title" content="riepilogo veicoli prenotati per noleggio" />
+		<meta name="description" content="riepilogo di tutti veicoli prenotati per il noleggio" />
+		<meta name="keywords" content="noleggio, veicoli noleggiati, riepilogo, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
@@ -22,9 +22,8 @@
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
-                <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
-                <veicoliNoleggio></veicoliNoleggio>
+                <h1 class="h1Amm">Lista dei noleggi prenotati</h1>
+                <listaNoleggi></listaNoleggi>
             </div>
         </div>
         <footer></footer>
