--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -30,21 +30,21 @@
                         <p class="pFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
                     
                         <label for="nome">Nome</label>
-                        <input type="text" name="nome" id="nome" class="" tabindex="12" />
+                        <input type="text" name="nome" id="nome" tabindex="13" />
 
                         <label for="cognome">Cognome</label>
-                        <input type="text" name="cognome" id="cognome" class="" tabindex="13" />
+                        <input type="text" name="cognome" id="cognome" tabindex="14" />
 
                         <label for="telefono">Recapito telefonico</label>
-                        <input type="text" name="telefono" id="telefono" class="" tabindex="14" />
+                        <input type="text" name="telefono" id="telefono" tabindex="15" />
 
                         <label for="indirizzo">Indirizzo</label>
-                        <input type="text" name="indirizzo" id="indirizzo" class="" tabindex="15" />
+                        <input type="text" name="indirizzo" id="indirizzo" tabindex="16" />
 
                         <label for="nascita">Data di nascita<br />&lpar;gg-mm-aaaa&rpar;</label>
-                        <input type="text" name="nascita" id="nascita" class="" tabindex="16" />
+                        <input type="text" name="nascita" id="nascita" tabindex="17" />
 
-                        <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="17" />
+                        <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="18" />
                     </fieldset>
                 </form>
             </div>
