--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -29,30 +29,30 @@
                         <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
                         <label for="targa">Targa &ast;</label>
-                        <input type="text" name="targa" id="targa" class="" tabindex="12" />
+                        <input type="text" name="targa" id="targa" tabindex="13" />
 
                         <label for="marca">Marca &ast;</label>
-                        <input type="text" name="marca" id="marca" class="" tabindex="13" />
+                        <input type="text" name="marca" id="marca" tabindex="14" />
 
                         <label for="modello">Modello &ast;</label>
-                        <input type="text" name="modello" id="modello" class="" tabindex="14" />
+                        <input type="text" name="modello" id="modello" tabindex="15" />
 
-                        <label for="cilindrata">Cilindrata in cc &ast;</label>
-                        <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
+                        <label for="cilindrata">Cilindrata in cm&sup3; &ast;</label>
+                        <input type="text" name="cilindrata" id="cilindrata" tabindex="16" />
 
-                        <label for="costo">Costo Giornaliero in &euro; &ast;</label>
-                        <input type="text" name="costo" id="costo" class="" tabindex="16" />
+                        <label for="costo">Costo al giorno in &euro; &ast;</label>
+                        <input type="text" name="costo" id="costo" tabindex="17" />
 
                         <label for="cauzione">Cauzione in &euro; &ast;</label>
-                        <input type="text" name="cauzione" id="cauzione" class="" tabindex="17" />
+                        <input type="text" name="cauzione" id="cauzione" tabindex="18" />
 
                         <label for="immagineAuto">Immagine &ast;</label>
-                        <input type="file" name="immagineAuto" id="immagineAuto" class="" tabindex="18" />
+                        <input type="file" name="immagineAuto" id="immagineAuto" tabindex="19" />
 
                         <label for="descrizione">Descrizione dell&apos;immagine &ast;</label>
-                        <input type="text" name="descrizione" id="descrizione" class="" tabindex="19" />
+                        <input type="text" name="descrizione" id="descrizione" tabindex="20" />
 
-                        <input type="submit" id="salvaNuovoVeicoloNoleggio" value="SALVA" tabindex="20" />
+                        <input type="submit" id="salvaNuovoVeicoloNoleggio" value="SALVA VEICOLO" tabindex="21" />
                     </fieldset>
                 </form>
             </div>
