--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -29,12 +29,12 @@
                         <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
                         <label for="oggetto">Oggetto &ast;</label>
-                        <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
+                        <input type="text" name="oggetto" id="oggetto" tabindex="13" />
 
-                        <label for="testo">Testo &ast;</label>
-                        <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="50" rows="5" ></textarea>
+                        <label for="testo">Messaggio &ast;</label>
+                        <textarea name="testo" id="testo" cols="50" rows="5" tabindex="14"></textarea>
 
-                        <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="14" />
+                        <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="15" />
                     </fieldset>
                 </form>
             </div>
