--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -30,21 +30,21 @@
                         <p class="pFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
 
                         <label for="marca">Marca</label>
-                        <input type="text" name="marca" id="marca" tabindex="12" />
+                        <input type="text" name="marca" id="marca" tabindex="13" />
 
                         <label for="modello">Modello</label>
-                        <input type="text" name="modello" id="modello" tabindex="13" />
+                        <input type="text" name="modello" id="modello" tabindex="14" />
 
                         <label for="cilindrata">Cilindrata in cm&sup3;</label>
-                        <input type="text" name="cilindrata" id="cilindrata" tabindex="14" />
+                        <input type="text" name="cilindrata" id="cilindrata" tabindex="15" />
 
-                        <label for="costo">Costo Giornaliero in &euro;</label>
-                        <input type="text" name="costo" id="costo" tabindex="15" />
+                        <label for="costo">Costo al giorno in &euro;</label>
+                        <input type="text" name="costo" id="costo" tabindex="16" />
 
                         <label for="cauzione">Cauzione in &euro;</label>
-                        <input type="text" name="cauzione" id="cauzione" tabindex="16" />
+                        <input type="text" name="cauzione" id="cauzione" tabindex="17" />
 
-                        <input type="submit" id="salvaModificheVeicoloNoleggio" value="SALVA MODIFICHE" tabindex="17" />
+                        <input type="submit" id="salvaModificheVeicoloNoleggio" value="SALVA MODIFICHE" tabindex="18" />
                     </fieldset>
                 </form>
             </div>
