--- a/HTML/listaNoleggiAmministratore.html
+++ b/HTML/listaNoleggiAmministratore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Riepilogo Veicoli Noleggiati &vert; Area Amministratore</title>
+        <title>Prenotazioni Veicoli A Noleggio &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="riepilogo veicoli prenotati per noleggio" />
 		<meta name="description" content="riepilogo di tutti veicoli prenotati per il noleggio" />
