--- a/HTML/home.html
+++ b/HTML/home.html
@@ -16,6 +16,9 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
+
+		<script src="../JS/generale.js" type="text/javascript"></script> 
+
 	</head>
 	
 	<body>
