add bottone scrollUp

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -45,6 +45,8 @@
 			<occasione></occasione>
 		</div>
 
+		<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+
 		<footer></footer>
 		
 	</body>
