--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
+		<script src="../JS/generale.js" type="text/javascript"></script> 
 	</head>
 
 	<body>
@@ -30,6 +31,8 @@
 		<div class="main">
 			<auto></auto>
 		</div>
+
+		<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
 
 		<footer></footer>
 	</body>
