--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
 		<script src="../JS/veicoli.js" type="text/javascript"></script> 
+		<script src="../JS/generale.js" type="text/javascript"></script> 
 	</head>
 
 	<body>
@@ -54,7 +55,9 @@
 						<h3 id="costoTot">COSTO TOTALE: 0</h3>
 					</div>
 				</div>
-            </div>
+			</div>
+			
+			<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
             
             <footer></footer>
         </div>
