fix errori accessibilità

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
     <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
 	<body>
