--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Auto in vendita e a noleggio</title>
 		<meta name="title" content="Auto per il noleggio o l'acquisto" />
 		<meta name="description" content="pagina riguardante tutte le auto acquistabili o noleggiabili" />
@@ -32,8 +33,9 @@
 			<auto></auto>
 		</div>
 
-		<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
-
+		<p>
+			<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+		</p>
 		<footer></footer>
 	</body>
 </html>
