fix css e javascript

--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -13,7 +13,7 @@
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-  	<script type="text/javascript" src=""></script>
+  	<script type="text/javascript" src="../JS/controlliClient.js"></script>
 	</head>
 
 	<body>
