--- a/HTML/login.html
+++ b/HTML/login.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="images/svg" href="" />
     <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-    <script type="text/javascript" src=""></script>
+		<script type="text/javascript" src="../JS/controlliClient.js"></script>
 	</head>
 
 	<body>
@@ -24,7 +24,7 @@
     <div class="main">
             <div class="formBox" >
                 <h1 class="titolo">Accedi al tuo account</h1>
-                <form id="loginForm" action="../PHP/accessoLogin.php" method="post">
+                <form id="loginForm" onsubmit="return checkForm('loginForm');" action="../PHP/accessoLogin.php" method="post">
                     <fieldset>
                         <legend>Email e password</legend>
 
