--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
+		<script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
     <body>
@@ -24,11 +24,11 @@
                 <messaggio></messaggio>
                 <p class="pAmm">Inserire qui le informazioni personali da modificare&period;</p>
                 <p class="pAmm"><strong>Attenzione</strong>&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato&period;</p>
-                <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
+                <form id="modificaInfo" onsubmit="return checkForm('modificaInfo');" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Personali</legend>
                         <p class="pFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
-                    
+
                         <label for="nome">Nome</label>
                         <input type="text" name="nome" id="nome" tabindex="13" />
 
